# very_cool_repo

./: .gitignore  LICENSE  README.md  SECURITY.md
homeworks/: README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb  requirements.txt
homeworks/HW02/data/: world_happiness_report.csv
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/data/: example.csv
homeworks/HW03/eda-cli/src/eda_cli/: __init__.py  cli.py  core.py  viz.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  cli.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW05/data/: S05-hw-dataset.csv
homeworks/HW06/: HW06.ipynb  S06-hw-report-template.md  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  S07-hw-dataset-01.csv  S07-hw-dataset-03.csv  report.md
homeworks/HW07/artifacts/: best_configs.json  labels_hw07_ds1.csv  labels_hw07_ds2.csv  labels_hw07_ds3.csv  metrics_summary.json
homeworks/HW07/data/: S07-hw-dataset-02.csv  S07-hw-report-template.md
project/: README.md  report.md  self-checklist.md
project/artifacts/: README.md
project/configs/: README.md
project/data/: README.md
project/notebooks/: README.md
project/src/: README.md
project/tests/: README.md
