[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "s03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "fastapi>=0.126.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "python-multipart>=0.0.21",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
